<resources>
    <string name="app_name" translatable="false">Booklique</string>
    <!-- Menu -->
    <string name="accueil">Accueil</string>
    <string name="reservation">Réservation</string>
    <string name="recherche">Recherche</string>
    <string name="favoris">Favoris</string>
    <string name="historique">Historique</string>

<!--    Page Accueil -->
    <string name="titre_librairie">Librairie</string>
    <string name="parcourir_genres">Parcourir les genres</string>
    <string name="parcourir_auteur">Parcourir par auteur</string>
    <string name="nouveautes">Nouveautés</string>

    <!--    Page Livre carde fragment recherche -->
    <string name="image_du_livre">Image du livre</string>
    <string name="titre_du_livre">Titre du livre</string>
    <string name="auteur">Auteur</string>
    <string name="genre">Genre</string>
    <string name="icone_favoris">Icône favoris</string>

    <!-- Page Détails -->
    <string name="details">Détails</string>
    <string name="statut">Statut : </string>
    <string name="description">Description</string>
    <string name="auteur_texte">Auteur : </string>
    <string name="echeance">Échéance : </string>
    <string name="reserver">Réserver</string>
    <string name="disponible"> Disponible</string>
    <string name="indisponible">Indisponible</string>

    <!-- Titres -->
    <string name="titre_genres">Genres de livres</string>

    <!-- Genres -->
    <string name="genre_affaires">Affaires</string>
    <string name="genre_biographies">Biographies et mémoires</string>
    <string name="genre_developpement_personnel">Développement personnel</string>
    <string name="genre_fiction">Fiction et littérature</string>
    <string name="genre_histoire">Histoire</string>

    <!--    Page reservation -->
    <string name="label_title">Titre : </string>
    <string name="label_reservation_date">Date de réservation : </string>
    <string name="label_due_date">À rendre : </string>
    <string name="button_cancel">Annuler</string>
    <string name="button_extend">Prolonger</string>
    <string name="editeur">Éditeur:</string>
    <string name="date_publication">Date de publication:</string>
    <string name="nombre_pages">Nombre de pages:</string>
    <string name="confirmer_reservation">Confirmer la réservation</string>


    <!--    Page Recherche -->
    <string name="search_hint">Rechercher un livre ou un auteur</string>
    <string name="search_label">Recherche : Toutes catégories</string>
    <string name="no_books_found">Aucun livre trouvé</string>

    <!--    Général -->
    <string name="date">Date : </string>
    <string name="reservations">Réservations</string>
    <string name="message_no_favoris"> Aucun favoris dans la liste</string>
    <string name="non_definit">non definie</string>

<!--    Messages -->
    <string name="message_description_calandar">Rappel de retour du livre avant la date limite</string>

</resources>