<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Présentation.Accueil.Vue">

    <FrameLayout
        android:id="@+id/chargement"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/accueil"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- Titre "Librairie" -->
            <TextView
                android:id="@+id/titre_librairie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titre_librairie"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="16dp"
                android:layout_gravity="start" />

            <!-- Parcourir les Genres -->
            <LinearLayout
                android:id="@+id/section_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/ic_menu_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_menu_24" />

                <TextView
                    android:id="@+id/texte_parcourir_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parcourir_genres"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:paddingStart="8dp" />

                <ImageView
                    android:id="@+id/ic_fleche_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_right_24" />
            </LinearLayout>

            <!-- Parcourir par Auteur -->
            <TextView
                android:id="@+id/texte_parcourir_auteur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parcourir_auteur"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:id="@+id/section_par_auteur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:background="#F5F5DC"
                android:paddingEnd="16dp"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/carte_auteurs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Carte d'auteur -->

                    <!-- Ajoutez d'autres cartes d'auteur ici si nécessaire -->

                </LinearLayout>

            </HorizontalScrollView>


            <!-- Section Nouveautés -->
            <LinearLayout
                android:id="@+id/section_nouveautes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/texte_nouveautes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nouveautes"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ic_fleche_nouveautes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_right_24" />
            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/before_liste_nouveautes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/liste_nouveautes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
